@@ -1591,19 +1591,45 @@ function to be removed without further warning."
 
 (defun bit-array-same-dimensions-p (array1 array2)
   (declare (type (array bit) array1 array2))
-  (and (= (array-rank array1)
-          (array-rank array2))
-       (dotimes (index (array-rank array1) t)
-         (when (/= (array-dimension array1 index)
-                   (array-dimension array2 index))
-           (return nil)))))
+  (let ((rank (array-rank array1)))
+    (and (= rank (array-rank array2))
+         (if (= rank 1)
+             (= (array-total-size array1)
+                (array-total-size array2))
+             (dotimes (index rank t)
+               (when (/= (%array-dimension array1 index)
+                         (%array-dimension array2 index))
+                 (return nil)))))))
+
+(defun copy-array-header (array)
+  (let* ((rank (%array-rank array))
+         (size (%array-available-elements array))
+         (result (make-array-header sb!vm:simple-array-widetag
+                                    rank)))
+    (loop for i below rank
+          do (%set-array-dimension result i
+                                   (%array-dimension array i)))
+    (setf (%array-displaced-from result) nil
+          (%array-displaced-p result) nil
+          (%array-fill-pointer-p result) nil
+          (%array-fill-pointer result) size
+          (%array-available-elements result) size)
+    result))
 
 (defun pick-result-array (result-bit-array bit-array-1)
   (case result-bit-array
     ((t) bit-array-1)
-    ((nil) (make-array (array-dimensions bit-array-1)
-                       :element-type 'bit
-                       :initial-element 0))
+    ((nil)
+     (if (vectorp bit-array-1)
+         (make-array (array-total-size bit-array-1)
+                     :element-type 'bit
+                     :initial-element 0)
+         (let ((header (copy-array-header bit-array-1)))
+           (setf (%array-data-vector header)
+                 (make-array (%array-available-elements bit-array-1)
+                             :element-type 'bit
+                             :initial-element 0))
+           header)))
     (t
      (unless (bit-array-same-dimensions-p bit-array-1
                                           result-bit-array)
@@ -1633,19 +1659,26 @@ function to be removed without further warning."
            (locally (declare (optimize (speed 3) (safety 0)))
              (,name bit-array-1 bit-array-2 result-bit-array))
            (with-array-data ((data1 bit-array-1) (start1) (end1))
-             (declare (ignore end1))
              (with-array-data ((data2 bit-array-2) (start2) (end2))
-               (declare (ignore end2))
                (with-array-data ((data3 result-bit-array) (start3) (end3))
-                 (do ((index-1 start1 (1+ index-1))
-                      (index-2 start2 (1+ index-2))
-                      (index-3 start3 (1+ index-3)))
-                     ((>= index-3 end3) result-bit-array)
-                   (declare (type index index-1 index-2 index-3))
-                   (setf (sbit data3 index-3)
-                         (logand (,function (sbit data1 index-1)
-                                            (sbit data2 index-2))
-                                 1))))))))))
+                 (if (and (zerop start1)
+                          (zerop start2)
+                          (zerop start3)
+                          (= (length data1) end1)
+                          (= (length data2) end2)
+                          (= (length data3) end3))
+                     (locally (declare (optimize (speed 3) (safety 0)))
+                       (,name data1 data2 data3))
+                     (do ((index-1 start1 (1+ index-1))
+                          (index-2 start2 (1+ index-2))
+                          (index-3 start3 (1+ index-3)))
+                         ((>= index-3 end3))
+                       (declare (type index index-1 index-2 index-3))
+                       (setf (sbit data3 index-3)
+                             (logand (,function (sbit data1 index-1)
+                                                (sbit data2 index-2))
+                                     1))))
+                 result-bit-array)))))))
 
 (def-bit-array-op bit-and logand)
 (def-bit-array-op bit-ior logior)
@@ -1672,14 +1705,20 @@ function to be removed without further warning."
         (locally (declare (optimize (speed 3) (safety 0)))
           (bit-not bit-array result-bit-array))
         (with-array-data ((src bit-array) (src-start) (src-end))
-          (declare (ignore src-end))
           (with-array-data ((dst result-bit-array) (dst-start) (dst-end))
-            (do ((src-index src-start (1+ src-index))
-                 (dst-index dst-start (1+ dst-index)))
-                ((>= dst-index dst-end) result-bit-array)
-              (declare (type index src-index dst-index))
-              (setf (sbit dst dst-index)
-                    (logxor (sbit src src-index) 1))))))))
+            (if (and (zerop src-start)
+                     (zerop dst-start)
+                     (= src-end (length src))
+                     (= dst-end (length dst)))
+                (locally (declare (optimize (speed 3) (safety 0)))
+                  (bit-not src dst))
+                (do ((src-index src-start (1+ src-index))
+                     (dst-index dst-start (1+ dst-index)))
+                    ((>= dst-index dst-end))
+                  (declare (type index src-index dst-index))
+                  (setf (sbit dst dst-index)
+                        (logxor (sbit src src-index) 1))))
+            result-bit-array)))))
 
 ;;;; array type dispatching
 
